--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rebass": "^4.0.7",
     "remark": "13.0.0",
     "remark-html": "13.0.1"
   },
   "devDependencies": {
+    "@types/rebass": "^4.0.8",
     "autoprefixer": "^10.2.1",
     "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.3.5"
   },
   "license": "MIT"
 }
