--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-share": "^4.4.0",
     "rebass": "^4.0.7",
     "remark": "13.0.0",
     "remark-html": "13.0.1"
