--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "classnames": "2.2.6",
     "date-fns": "2.16.1",
+    "disqus-react": "^1.1.1",
     "gray-matter": "4.0.2",
     "next": "latest",
     "react": "^17.0.2",
