--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "disqus-react": "^1.1.1",
     "gray-matter": "4.0.2",
     "next": "latest",
+    "next-i18next": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-share": "^4.4.0",
