--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/rebass": "^4.0.8",
     "autoprefixer": "^10.2.1",
+    "next-sitemap": "^1.6.148",
     "postcss": "^8.2.4",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.3.5"
