--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-i18next": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-hydration": "^0.1.0",
     "react-share": "^4.4.0",
     "remark": "13.0.0",
     "remark-html": "13.0.1"
