--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,13 @@
 {
   "name": "Shareuhack",
   "short_name": "Shareuhack",
+  "start_url": "/",
   "icons": [
     {
       "src": "/favicons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/favicons/android-chrome-512x512.png",
