add Chart component and usePriceSet

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
     "date-fns": "2.16.1",
+    "dayjs": "^1.10.7",
     "disqus-react": "^1.1.1",
     "embla-carousel-react": "^6.1.1",
     "gray-matter": "4.0.2",
+    "lightweight-charts": "^3.7.0",
     "next": "latest",
     "next-i18next": "^8.5.5",
     "react": "^17.0.2",
