--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
+    "@svgr/webpack": "^6.2.1",
     "date-fns": "2.16.1",
     "dayjs": "^1.10.7",
     "disqus-react": "^1.1.1",
