--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazy-hydration": "^0.1.0",
+    "react-script": "^2.0.5",
     "react-share": "^4.4.0",
     "remark": "13.0.0",
     "remark-html": "13.0.1"
